namespace/media/bazarr/ingress-route.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: bazarr-https
  namespace: media
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`nbazarr.oglesby.io`)
      kind: Rule
      middlewares:
        - name: internal-whitelist
          namespace: traefik
      services:
        - name: bazarr
          port: 6767
  tls: 
    secretName: oglesby-io-tls
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: bazarr-http
  namespace: media
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`nbazarr.oglesby.io`)
      kind: Rule
      middlewares:
        - name: internal-whitelist
          namespace: traefik
        - name: redirect-https
          namespace: traefik
      services:
        - name: bazarr
          port: 6767
